--- a/page.css
+++ b/page.css
@@ -500,7 +500,7 @@ span {
     position: absolute;
     height: 100%;
     width: 100%;
-    background-image: url("./images/undraw_online_transactions_02ka.png");
+    background-image: url("./images/undraw_online_transactions_02ka.svg");
     background-repeat: no-repeat;
     background-size: 700px;
     background-position: bottom;
