--- a/page.css
+++ b/page.css
@@ -25,6 +25,7 @@ h3 {
     font-size: 20px;
     text-decoration: none;
     text-align-last: end;
+    transition: 0.5s;
 }
 ::-webkit-scrollbar {
     width: 10px;
@@ -263,6 +264,7 @@ header ul li a:hover {
     z-index: 10;
     transform: scale(0.5);
     transform: translateX(-200);
+    transition: 0.5s;
 }
 .home .image {
     position: absolute;
@@ -284,6 +286,7 @@ header ul li a:hover {
     font-weight: lighter;
     opacity: 0;
     margin-bottom: -50px;
+    transition: 0.5s;
 }
 h2 {
     color: #004E89;
@@ -363,6 +366,7 @@ span {
     justify-self: self-start;
     margin-top: -20%;
     margin-left: 30px;
+    transition: 0.5s;
 }
 .home-down .content-right-second,
 .home-down .content-right-fourth,
@@ -373,6 +377,7 @@ span {
     justify-self: self-end;
     margin-top: -50%;
     margin-right: 30px;
+    transition: 0.5s;
 }
 .box-lineleft-first,
 .box-lineleft-third,
@@ -441,16 +446,122 @@ span {
     .home .image {
         opacity: 0 !important;
     }
+    .home-down h3 {
+        font-size: 17px;
+    }
+    .home-down .content-left-first, 
+    .home-down .content-left-third, 
+    .home-down .content-left-fifth, 
+    .home-down .content-left-seventh {
+        margin-left: 0px;
+    }
+    .home-down .content-right-second, 
+    .home-down .content-right-fourth, 
+    .home-down .content-right-sixth, 
+    .home-down .content-right-eighth {
+        margin-top: -80% !important;
+        margin-right: 0px !important;
+    }
+    .home-down .content-left-first, .home-down .content-left-third, .home-down .content-left-fifth, .home-down .content-left-seventh {
+        margin-left: 30px;
+    }
+}
+@media (max-width: 820px) {
+    .home h2 {
+        font-size: 30px;
+    }
+    .home .content {
+        margin-left: 25px;
+    }
+
+    .home-down {
+        margin-top: -140px;
+    }
+    .home-down .img-left-first, .home-down .img-left-third, .home-down .img-left-fifth, .home-down .img-left-seventh {
+        margin-right: -150px;
+    }
+    .home-down img {
+        height: 200px;
+        width: 150px;
+    }
+    .box-lineleft-first, .box-lineleft-third, .box-lineleft-fifth, .box-lineleft-seventh {
+        height: 200px;
+        width: 150px;
+    }
+    .home-down h3 {
+        font-size: 13px;
+    }
+    .home-down .content-left-first, 
+    .home-down .content-left-third, 
+    .home-down .content-left-fifth, 
+    .home-down .content-left-seventh {
+        margin-left: 125px;
+    }
+}
+@media (max-width: 670px) {
+    .home h3 {
+        font-size: 18px;
+        text-align-last: start;
+    }
+
+    
 }
 @media (max-width: 590px) {
     .home {
         padding-left: 11%;
     }
     h2 {
-        font-size: 40px !important;
+        font-size: 35px !important;
     }
     p {
         font-size: 13px !important;
+    }
+    footer {
+        height: 5vh;
+    }
+    footer h3 {
+        font-size: 10px;
+    }
+    .about h3 {
+        font-size: 17px !important;
+        max-width: 300px;
+    }
+    .home-down img {
+        height: 150px;
+        width: 100px;
+        transform: translate3d(-85px, -45px, 10px);
+    }
+    .box-lineleft-first, 
+    .box-lineleft-third, 
+    .box-lineleft-fifth, 
+    .box-lineleft-seventh {
+        height: 150px;
+        width: 100px;
+    }
+    .box-lineright-second,
+    .box-lineright-fourth,
+    .box-lineright-sixth,
+    .box-lineright-eighth {
+        height: 150px;
+        width: 100px;
+    }
+    .home-down .content-left-first, 
+    .home-down .content-left-third, 
+    .home-down .content-left-fifth, 
+    .home-down .content-left-seventh {
+        margin-left: 55px;
+        margin-top: -140px;
+    }
+    .home-down .content-right-second,
+    .home-down .content-right-fourth,
+    .home-down .content-right-sixth,
+    .home-down .content-right-eighth {
+        margin-right: -55px;
+        margin-top: -140px;
+    }
+    .home-down h3 {
+        font-size: 7px;
+        letter-spacing: 0.5px;
     }
 }
 @media (max-height: 430px) {
@@ -757,6 +868,7 @@ span {
 @media (max-width: 590px) {
     #progress-bar {
         width: 300px;
+        margin-top: -40vh;
     }
     #progress-bar li > img:hover {
         width: 65px !important;
@@ -765,9 +877,13 @@ span {
     }
     #progress-content .section h2 {
         font-size:15px !important;
+        margin-bottom: -20px;
     }
     #progress-content .section p{
         font-size: 10px !important;
+    }
+    #progress-bar #line {
+        top: 105px;
     }
 }
 @media (max-width: 750px) {
@@ -1195,7 +1311,69 @@ span {
     grid-row: 2/2;
     justify-self: center;
 }
-
+@media (max-width: 1070px){
+    .box {
+        width: 150px;
+        height: 150px;
+    }
+    .grid img {
+        height: 100px;
+        width: 200px;
+    }
+    .grid .box-lineleft {
+        width: 200px;
+        height: 100px;
+    }
+    .grid .box-linecenter {
+        width: 200px;
+        height: 100px;
+    }
+    .grid .box-lineright {
+        width: 200px;
+        height: 100px;
+    }
+    .grid h3 {
+        font-size: 13px;
+    }
+    .boxes {
+        grid-gap: 60px;
+    }
+}
+@media (max-width: 590px){
+    .box {
+        width: 150px;
+        height: 150px;
+    }
+    .grid img {
+        height: 60px;
+        width: 100px;
+    }
+    .grid .box-lineleft {
+        width: 100px;
+        height: 60px;
+    }
+    .grid .box-linecenter {
+        width: 100px;
+        height: 60px;
+    }
+    .grid .box-lineright {
+        width: 100px;
+        height: 60px;
+    }
+    .grid h3 {
+        font-size: 8px;
+    }
+    .grid {
+        grid-gap: 20px;
+    }
+    .boxes {
+        grid-gap: 15px;
+    }
+    .box {
+        width: 100px;
+        height: 60px;
+    }
+}
 
 
 /* CONTACT SECTION */
